[package]
name = "weblab-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.86", features=["fold", "full"]}
quote = "1.0.15"
proc-macro2 = "1.0.36"