[package]
name = "weblab-macros"
version = "0.2.18"
edition = "2021"
license = "MIT"
authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
description = "proc macros to generate weblab assignments"
homepage = "https://github.com/jonay2000/weblab-rs"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.86", features=["fold", "full"]}
quote = "1.0.15"
proc-macro2 = "1.0.36"
serde_json = "1.0.79"
