[package]
name = "weblab"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
description = "library to generate weblab assignments from a rust project structure"
homepage = "https://github.com/jonay2000/weblab-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weblab-macros = {path="../weblab-macros"}
weblab-assignment-structure = {path="../weblab-assignment-structure"}