[package]
name = "weblab"
version = "0.2.3"
edition = "2021"
license = "MIT"
authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
description = "library to generate weblab assignments from a rust project structure"
homepage = "https://github.com/jonay2000/weblab-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weblab-macros = {path="../weblab-macros", version="^0.2"}
weblab-assignment-structure = {path="../weblab-assignment-structure", version="^0.2"}

serde = {version="1.0.136", features=["derive"]}
serde_json = "1.0.79"
clap = {version="3.1.6", features=["derive"]}
zip = "0.5.13"
walkdir = "2.3.2"
pathdiff = "0.2.1"
sanitize-filename = "0.3.0"
