[package]
name = "weblab-docker-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
description = "weblab runner for docker"
homepage = "https://github.com/jonay2000/weblab-rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.136", features=["derive"]}
lazy_static = "1.4.0"
async-trait = "0.1.52"
futures = "0.3.21"
tokio = {version = "1.17.0", features=["full"]}
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
regex = "1.5.5"
serde_json = "1.0.79"
itertools = "0.10.3"
parking_lot = "0.12.0"
petgraph = "0.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
